fixed ccs and added features

--- a/src/components/Carro.css
+++ b/src/components/Carro.css
@@ -1,12 +1,5 @@
-.task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.preco{
+  color: "#EA4E3B";
+  font-weight: bold;
+  text-align: right;
 }
