--- a/src/pages/Details.css
+++ b/src/pages/Details.css
@@ -2,14 +2,15 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
+  gap: 5px 5px;
   grid-template-areas:
-    '. imageCar imageCar imageCar options'
-    '. imageCar imageCar imageCar options'
-    '. details details details options';
+    '. imageCar imageCar options .'
+    '. imageCar imageCar options .'
+    '. details details . .';
 }
 .imageCar {
   grid-area: imageCar;
+  border-bottom: medium solid grey;
 }
 .options {
   grid-area: options;
@@ -17,3 +18,9 @@
 .details {
   grid-area: details;
 }
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
